<resources>
    <string name="about_app">Mileage is provided for free; if you paid for this, I suggest you get a refund. Mileage is open-source under the Apache 2.0 license. Patches are very much welcome!</string>
    <string name="about_author">Evan Charlton</string>
    <string name="about_charts">ArtfulBits graciously donated their charting library. I cannot recommend this enough; easily the best charting solution on Android!</string>
    <string name="about_charts_btn">Check out aiCharts!</string>
    <string name="about_charts_website">http://www.artfulbits.com/products/android/aicharts.aspx</string>
    <string name="about_clutchpad">"ClutchPad is Steve's awesome application for navigating the Android activity stack. I highly recommend checking it out!"</string>
    <string name="about_clutchpad_btn">ClutchPad on Market</string>
    <string name="about_clutchpad_website">http://stevealbright.com/</string>
    <string name="about_contact">mileage@evancharlton.com</string>
    <string name="about_translators">"
 SnowmanDK"</string>
    <string name="about_website">http://android-mileage.googlecode.com/</string>
    <string name="add">Add</string>
    <string name="add_default_templates">Add default templates</string>
    <string name="add_field">Add new field</string>
    <string name="add_fillup">Save Fillup</string>
    <string name="add_service_interval">Add service interval</string>
    <string name="add_service_interval_template">Add service interval template</string>
    <string name="add_vehicle">Add new vehicle</string>
    <string name="add_vehicle_type">Add new vehicle type</string>
    <string name="app_name">Mileage</string>
    <string name="close">Close</string>
    <string name="column_date">Date</string>
    <string name="column_economy">Fuel economy</string>
    <string name="column_id">ID</string>
    <string name="column_latitude">Latitude</string>
    <string name="column_longitude">Longitude</string>
    <string name="column_metadata">Metadata</string>
    <string name="column_none">[Skip]</string>
    <string name="column_odometer">Odometer</string>
    <string name="column_partial">Is partial?</string>
    <string name="column_restart">Restart calculations?</string>
    <string name="column_total_cost">Total cost</string>
    <string name="column_unit_price">Price per unit</string>
    <string name="column_vehicle">Vehicle</string>
    <string name="column_volume">Volume</string>
    <string name="cost_unit_price">Total cost, unit price</string>
    <string name="cost_volume">Total cost, volume</string>
    <string name="creating_chart">Creating chart…</string>
    <string name="delete">Delete</string>
    <string name="delete_service_interval">Delete service interval?</string>
    <string name="delta_days">Days</string>
    <string name="delta_months">Months</string>
    <string name="delta_weeks">Weeks</string>
    <string name="delta_years">Years</string>
    <string name="description">Description</string>
    <string name="dialog_message_delete">Are you sure you want to delete this? This cannot be undone!</string>
    <string name="dialog_message_missing_files">To import files, place them in the \"mileage/\" folder in the root of your SD card.</string>
    <string name="dialog_title_delete">Really delete?</string>
    <string name="dialog_title_meta_fields">Extra field</string>
    <string name="dialog_title_missing_files">Missing files?</string>
    <string name="distance">Distance</string>
    <string name="divider_about_app">About Mileage</string>
    <string name="divider_about_charts">Charts donated by aiCharts</string>
    <string name="divider_about_graphics">Graphics donated by Steve Albright</string>
    <string name="divider_about_translators">Translated by</string>
    <string name="divider_date_format">Date format</string>
    <string name="divider_fillup_fields">Extra data</string>
    <string name="divider_fillup_info">Fillup information</string>
    <string name="divider_fillup_statistics">Statistics</string>
    <string name="divider_interval_info">Service interval information</string>
    <string name="divider_interval_start">When to start</string>
    <string name="divider_interval_template">Template to use (optional)</string>
    <string name="divider_interval_trigger">When to remind</string>
    <string name="divider_interval_vehicle">Vehicle</string>
    <string name="divider_loaded_date">Saved date</string>
    <string name="divider_parsed_date">Parsed date</string>
    <string name="divider_vehicle_information">Vehicle information</string>
    <string name="divider_vehicle_type">Vehicle type</string>
    <string name="divider_vehicle_units">Measurement units</string>
    <string name="done">Done</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="edit_fields">Edit fields</string>
    <string name="edit_service_interval_templates">Edit templates</string>
    <string name="edit_vehicle_types">Edit vehicle types</string>
    <string name="empty_fields">"No additional fields have been created!
Press menu or use the button below to add as many as you want!"</string>
    <string name="empty_fillups">"No saved fillups for this vehicle!
Go fill up your tank and try again."</string>
    <string name="empty_service_interval_templates">"There are no defined templates.
Press menu or use the buttons below to add some!"</string>
    <string name="empty_service_intervals">"You haven't set any service intervals!
Press menu or use the buttons below to add some!"</string>
    <string name="erase_database">Erase database before importing</string>
    <string name="error_could_not_parse_date">Could not parse date!</string>
    <string name="error_date_in_past">The date cannot be for the future</string>
    <string name="error_invalid_field_description">Invalid field description</string>
    <string name="error_invalid_field_title">Invalid field title</string>
    <string name="error_invalid_field_type">Invalid field type</string>
    <string name="error_invalid_fillup_id">Invalid fillup ID</string>
    <string name="error_invalid_interval_description">Invalid service interval description</string>
    <string name="error_invalid_interval_distance">Invalid service interval distance</string>
    <string name="error_invalid_interval_duration">Invalid service interval duration</string>
    <string name="error_invalid_interval_odometer">Invalid service interval odometer</string>
    <string name="error_invalid_interval_timestamp">Invalid service interval start date</string>
    <string name="error_invalid_interval_title">Invalid service interval title</string>
    <string name="error_invalid_interval_vehicle">Vehicle not specified</string>
    <string name="error_invalid_statistic_item">Invalid item specified for the statistic</string>
    <string name="error_invalid_statistic_key">Invalid key specified for the statistic</string>
    <string name="error_invalid_template_description">Invalid template description</string>
    <string name="error_invalid_template_distance">Invalid template distance</string>
    <string name="error_invalid_template_duration">Invalid template duration</string>
    <string name="error_invalid_template_id">Invalid field template ID</string>
    <string name="error_invalid_template_title">Invalid template title</string>
    <string name="error_invalid_template_vehicle_type">Vehicle type not specified</string>
    <string name="error_invalid_vehicle_make">Invalid vehicle make</string>
    <string name="error_invalid_vehicle_model">Invalid vehicle model</string>
    <string name="error_invalid_vehicle_title">Invalid vehicle title</string>
    <string name="error_invalid_vehicle_type">Vehicle type not set</string>
    <string name="error_invalid_vehicle_type_description">Invalid vehicle type description</string>
    <string name="error_invalid_vehicle_type_title">Invalid vehicle type title</string>
    <string name="error_invalid_vehicle_year">Invalid vehicle year</string>
    <string name="error_media_unmounted">SD card unmounted or not present!</string>
    <string name="error_no_odometer_specified">Invalid value for odometer</string>
    <string name="error_no_price_specified">Invalid value for price</string>
    <string name="error_no_total_cost_specified">Invalid value for total cost</string>
    <string name="error_no_vehicle_specified">No vehicle was specified</string>
    <string name="error_no_volume_specified">Invalid value for volume</string>
    <string name="export_data">Export data</string>
    <string name="export_error">Unable to export data!</string>
    <string name="exported">Exported data to %1$s!</string>
    <string name="exporter_csv">Spreadsheet (Excel, Google Docs)</string>
    <string name="exporter_sqlite">Database (backups, SQLite)</string>
    <string name="exporting">Exporting to %1$s …</string>
    <string name="field_description">Description</string>
    <string name="field_title">Title</string>
    <string name="fillup">Fillup</string>
    <string name="history">History</string>
    <string name="import_data">Import data</string>
    <string name="import_export_text">"If you need to get data off your device, or load data from an external source, this is where you want to be. In order to import or export data, use the \"mileage/\" folder on your device; you'll likely need to connect to your computer via USB for this."</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="next">Next</string>
    <string name="odometer">Odometer</string>
    <string name="partial_fillup">Tank was not filled to the top</string>
    <string name="previous">Previous</string>
    <string name="set_vehicle_as_default">This is the default vehicle</string>
    <string name="settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">About Mileage %1$s</string>
    <string name="settings_auto_backup_off">Backups will not be automatically made</string>
    <string name="settings_auto_backup_on">Your data will be automatically copied to external storage</string>
    <string name="settings_auto_backup_title">Perform backups</string>
    <string name="settings_currency_title">Currency symbol</string>
    <string name="settings_data_format_summary">Choose the most convenient way to enter data</string>
    <string name="settings_data_format_title">Fillup options</string>
    <string name="settings_interval_enabled_off">Service interval reminders disabled</string>
    <string name="settings_interval_enabled_on">Service interval reminders enabled</string>
    <string name="settings_interval_enabled_title">Enable notifications</string>
    <string name="settings_interval_led">Blink LED</string>
    <string name="settings_interval_led_off">LED will not flash</string>
    <string name="settings_interval_led_on">LED will flash for reminders</string>
    <string name="settings_interval_sound">Select ringtone</string>
    <string name="settings_interval_vibrate">Vibrate</string>
    <string name="settings_interval_vibrate_off">Phone will not vibrate</string>
    <string name="settings_interval_vibrate_on">Phone will vibrate for reminders</string>
    <string name="settings_location">Store location</string>
    <string name="settings_location_off">No location information will be stored at all</string>
    <string name="settings_location_on">Your location for fillups will be stored privately</string>
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_units">Change units</string>
    <string name="settings_units_summary">How to set gallons/litres/km/etc.</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
</resources>