<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mileage="http://schemas.android.com/apk/res/com.evancharlton.mileage">
    <com.evancharlton.mileage.views.DividerView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/divider_interval_vehicle" />
    <com.evancharlton.mileage.views.CursorSpinner android:id="@id/vehicles" android:layout_width="fill_parent" android:layout_height="wrap_content" mileage:auto_hide="false" mileage:display_field="title" mileage:uri="vehicles" />
    <com.evancharlton.mileage.views.DividerView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/divider_interval_template" />
    <com.evancharlton.mileage.views.CursorSpinner android:id="@id/types" android:layout_width="fill_parent" android:layout_height="wrap_content" mileage:auto_hide="false" mileage:display_field="title" mileage:uri="intervals/templates" />
    <include layout="@layout/service_interval_base" />
    <com.evancharlton.mileage.views.DividerView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/divider_interval_start" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/odometer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/odometer" android:layout_weight="1.0" android:inputType="number" />
        <com.evancharlton.mileage.views.DateButton android:id="@id/date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
</merge>