<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mileage="http://schemas.android.com/apk/res/com.evancharlton.mileage">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/next" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/next" android:layout_weight="1.0" />
        <Button android:id="@id/previous" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/previous" android:layout_weight="1.0" />
    </LinearLayout>
    <com.evancharlton.mileage.views.FormattedDateView android:textAppearance="?android:textAppearanceLarge" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" mileage:dateFormat="long" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/stat_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
    <Button android:id="@id/edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit" />
</LinearLayout>