<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mileage="http://schemas.android.com/apk/res/com.evancharlton.mileage">
    <com.evancharlton.mileage.views.CursorSpinner android:id="@id/vehicle" android:layout_width="fill_parent" android:layout_height="wrap_content" mileage:display_field="title" mileage:uri="vehicles" />
    <com.evancharlton.mileage.views.DividerView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/divider_fillup_info" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow>
            <EditText android:id="@id/price" android:layout_width="0.0dip" android:layout_height="wrap_content" android:numeric="decimal" android:layout_weight="1.0" />
            <EditText android:id="@id/volume" android:layout_width="0.0dip" android:layout_height="wrap_content" android:numeric="decimal" android:layout_weight="1.0" />
        </TableRow>
        <TableRow>
            <EditText android:id="@id/odometer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/odometer" android:digits="+0123456789." android:layout_weight="1.0" android:inputType="number" />
            <com.evancharlton.mileage.views.DateButton android:id="@id/date" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
    <CheckBox android:id="@id/partial" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/partial_fillup" />
    <LinearLayout android:orientation="vertical" android:id="@id/container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</merge>